[package]
name = "webservice"
version = "0.1.0"
edition = "2021"
default-run = "blog-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6.0"
actix-rt = "2.9.0"
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
serde = { version = "1.0.203", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
    "bigdecimal"
] }
log = "0.4.21"
env_logger = "0.11.5"
md5 = "0.7.0"
futures-util = "0.3.30"

tokio = "1.39.2"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[bin]]
name = "blog-service"